[project]
name = "to"
version = "0.1"
description = "Convert or compare between JSON, YAML, TOML, JSON5 and literal Python collections."
requires-python = ">=3.10"

[project.scripts]
to = "to:main"

[project.optional-dependencies]
rich = [
    "json5",
    "ruamel-yaml",
    "toml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff",
]
