[project]
name = "to"
version = "0.1"
description = "CLI & Python package to convert or diff between JSON, YAML, TOML, JSON5 and literal Python collections."
requires-python = ">=3.10"
dependencies = [
    "json5>=0.9.28",
    "ruamel-yaml>=0.18.6",
    "toml>=0.10.2",
]

[project.scripts]
to = "to:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "argcomplete",
    "ipdb",
    "ipython",
    "pytest",
    "ruff",
]
pretty = [
    "rich",
]
yaml = [
    "ruamel-yaml",
]
json5 = [
    "json5",
]
toml = [
    "toml",
]
magic = [
    "pyperclip",
]
